# shcase

./: Cargo.toml  OBSIDIAN-PLAN.md  PLAN.md  check.ps1  ejemplo-examen.md  ejemplo.md  ejemplo.pptx  plantilla_powerpoint_rust.md
samples/: ejemplo.md  template.pptx
src/: cli.rs  error.rs  interactive.rs  main.rs
src/ai/: client.rs  mod.rs  prompts.rs
src/config/: credentials.rs  settings.rs
src/examen/: generator.rs
src/markdown/: parser.rs  types.rs
src/pptx/: extractor.rs
src/template/: engine.rs  types.rs
